--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <title>my home page</title>
     </head>
     <body>
-        <img src="kohli.jpg">
+        <h1 style="font-size:300%">full  meals to virat fans</h1>
+        <p style="font-size:200%">tap on virat photo </p>
+        <a href="video.html" ><img src="kohli.jpg"></a>
     </body>
 </head>
